# FerrisFetcher

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  instructions.md
examples/: basic_scraping.rs  builder_pattern.rs  comprehensive_demo.rs  concurrent_scraping.rs  data_extraction.rs
src/: client.rs  config.rs  error.rs  extractor.rs  html_parser.rs  lib.rs  scraper.rs  types.rs
