[package]
name = "ferrisfetcher"
version = "0.1.0"
edition = "2021"
authors = ["FerrisFetcher Contributors"]
description = "A cutting-edge, high-level web scraping library crafted in Rust"
license = "Apache-2.0"
repository = "https://github.com/M1tsumi/FerrisFetcher"
homepage = "https://github.com/M1tsumi/FerrisFetcher"
documentation = "https://docs.rs/ferrisfetcher"
keywords = ["web-scraping", "async", "html", "scraper", "crawler"]
categories = ["web-programming::http-client", "text-processing"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies", "stream"] }
scraper = "0.17"
html5ever = "0.26"
cssparser = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
tower = "0.4"
dashmap = "5.5"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"

[features]
default = ["full"]
full = ["database", "cli"]
database = []
cli = []

